Fix form preview overlap when mobile.

--- a/ui/scss/_form.scss
+++ b/ui/scss/_form.scss
@@ -23,7 +23,7 @@
   }
 
   @media all and (max-width: 699px) {
-    flex: 1 0 100vh;
+    flex: 1 0 auto;
   }
 }
 
